# ood

./: .gitignore  CMakeLists.txt  Thatssomefunnyshit
.devcontainer/: devcontainer.json
lab1/: CMakeLists.txt
lab1/strategy/: CMakeLists.txt  main.cpp
lab1/strategy_functional/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt
lab2/ObserverFP/: main.cpp
lab2/WeatherStation/: CMakeLists.txt  main.cpp
lab2/WeatherStation/header/: Display.h  Observer.h  StatisticData.h  StatsDisplay.h  WeatherData.h
lab2/WeatherStation/src/: Display.cpp  StatsDisplay.cpp  WeatherData.cpp
lab2/WeatherStation2/: CMakeLists.txt  main.cpp
lab2/WeatherStation2/header/: DangerousObserver.h  Display.h  Observer.h  StatisticData.h  StatsDisplay.h  WeatherData.h  pch.h
lab2/WeatherStation2/src/: WeatherData.cpp
lab2/WeatherStation2/tests/: main.test.cpp
lab2/WeatherStation3/: CMakeLists.txt  main.cpp
lab2/WeatherStation3/header/: Observer.h  StatisticData.h  WeatherData.h
lab2/WeatherStation3/tests/: ObserverPriority.h
lab2/WeatherStationDuo/: CMakeLists.txt  main.cpp
lab2/WeatherStationDuo/header/: Display.h  DisplayDuo.h  Observer.h  StatisticData.h  StatsDisplay.h  WeatherData.h  pch.h
lab2/WeatherStationDuo/src/: Display.cpp  DisplayDuo.cpp  StatsDisplay.cpp
lab2/WeatherStationPro/: CMakeLists.txt  main.cpp
lab2/WeatherStationPro/header/: Display.h  StatisticData.h  StatsDisplay.h  WeatherData.h  pch.h
lab2/WeatherStationPro/src/: Display.cpp  StatsDisplay.cpp  WeatherData.cpp
lab2/WeatherStationPro/tests/: main.test.cpp
lab3/: CMakeLists.txt
lab3/streams/: CMakeLists.txt  Makefile  main.cpp
lab3/streams_test/: CMakeLists.txt  Compressed257Out.txt  main.test.cpp  test.txt
lab3/streams_test/headers/: pch.hpp
lab3/streams_test/unit/: FileCompressLimit.test.cpp  FileExists.test.cpp  FileInputStream.test.cpp  FileInputStreamDeCrypted.test.cpp  FileOutputStream.test.cpp  MemoryInputStream.test.cpp  MemoryOutputStream.test.cpp  WritingReadingCompress.test.cpp  WritingReadingCrpyt.test.cpp  pch.cpp
lab3/task1/: CMakeLists.txt  main.cpp
lab3/task2/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt
lab4/examples/: input_1.txt  input_2.txt
lab4/headers/: pch.hpp
lab4/headers/Canvas/: ICanvas.hpp  SVGCanvas.hpp
lab4/headers/Designer/: Designer.hpp  IDesigner.hpp
lab4/headers/Draft/: PictureDraft.hpp
lab4/headers/Painter/: Painter.hpp
lab4/headers/Shapes/: Color.hpp  Ellipse.hpp  IShape.hpp  Point.hpp  Rectangle.hpp  RegularPolygon.hpp  Shape.hpp  ShapeType.hpp
lab4/headers/Shapes/Factory/: IShapeFactory.hpp  ShapeFactory.hpp
lab4/headers/Shapes/Util/: RegularPolygonVertexesCreator.hpp
lab4/headers/utility/: IEqualString.hpp
lab4/src/: CMakeLists.txt  main.cpp
lab4/src/Canvas/: SVGCanvas.cpp
lab4/src/Designer/: Designer.cpp
lab4/src/Draft/: PictureDraft.cpp
lab4/src/Painter/: Painter.cpp
lab4/src/Shape/: Ellipse.cpp  Rectangle.cpp  RegularPolygon.cpp  Shape.cpp  Triangle.cpp
lab4/src/Shape/Factory/: ShapeFactory.cpp
lab4/test/Unit/: Designer.test.cpp  Painter.test.cpp  PictureDraft.test.cpp  Shapes.test.cpp  ShapesFactory.test.cpp
lab4/test/headers/: pch.hpp
lab5/: CMakeLists.txt
lab5/task1/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt
lab6/task1/: CMakeLists.txt  main.cpp
lab6/task1/headers/app/: ModernGraphicsRendererAdapter.hpp  PaintPicture.hpp
lab6/task1/headers/graphics_lib/: Canvas.hpp  ICanvas.hpp
lab6/task1/headers/modern_graphics_lib/: ModernGraphicsRenderer.hpp
lab6/task1/headers/shape_drawing_lib/: Point.hpp  Rectangle.hpp
lab6/task1/src/app/: ModernGraphicsRendererAdapter.cpp  PaintPicture.cpp
lab6/task1/src/shape_drawing_lib/: CanvasPainter.cpp
lab6/task1/test/: main.test.cpp
lab6/task2/: CMakeLists.txt
lab6/task2/headers/: pch.hpp
lab6/task2/headers/app/: ModernGraphicsRendererAdapter.hpp
lab6/task2/headers/modern_graphics_lib/: Point.hpp
lab6/task2/headers/shape_drawing_lib/: CanvasPainter.hpp  ICanvasDrawable.hpp  Triangle.hpp
lab6/task2/src/app/: ModernGraphicsRendererAdapter.cpp  PaintPicture.cpp
lab6/task2/src/graphics_lib/: Canvas.cpp
lab6/task2/src/modern_graphics_lib/: ModernGraphicsRenderer.cpp
lab6/task2/src/shape_drawing_lib/: Rectangle.cpp  Triangle.cpp
lab6/task2/test/unit/: AdapterTest.cpp
lab7/: CMakeLists.txt  Canvas.h  main.cpp  version1.h
lab7/src/: main.cpp  pch.hpp
lab7/src/canvas/: ICanvas.hpp  ICanvas_fwd.hpp
lab7/src/canvas/CCanvas/sfml_canvas/: SFMLCanvas.cpp  SFMLCanvas.hpp
lab7/src/drawable/: IDrawable.hpp  IDrawable_fwd.hpp
lab7/src/drawable/common/: slides_common.hpp
lab7/src/drawable/common/color/: RGBAColor.hpp
lab7/src/drawable/common/point/: Point.cpp  Point.hpp  PointD.hpp
lab7/src/drawable/common/rect/: Rect.hpp  RectD.hpp
lab7/src/drawable/former/: Examples.cpp  Examples.hpp
lab7/src/drawable/shape/: IShape.hpp  IShape_fwd.hpp
lab7/src/drawable/shape/CShape/: BaseShape.cpp  BaseShape.hpp
lab7/src/drawable/shape/CShape/ellipse/: Ellipse.cpp  Ellipse.hpp
lab7/src/drawable/shape/CShape/rectangle/: Rectangle.cpp  Rectangle.hpp
lab7/src/drawable/shape/CShape/triangle/: Triangle.cpp  Triangle.hpp
lab7/src/drawable/shape/group_shape/: IGroupShape.hpp  IGroupShape_fwd.hpp
lab7/src/drawable/shape/group_shape/CGroupShape/: GroupShape.cpp  GroupShape.hpp
lab7/src/drawable/shape/shapes/: IShapes.hpp  IShapes_fwd.hpp
lab7/src/drawable/shape/style/: IStyle.hpp  IStyle_fwd.hpp
lab7/src/drawable/shape/style/CStyle/: Style.cpp  Style.hpp  StyleComposite.cpp  StyleComposite.hpp
lab7/src/drawable/shape/style/common/: styles_common.cpp  styles_common.hpp
lab7/src/drawable/shape/style/enumerator/: FillStyleEnumerator.hpp  OutlineStyleEnumerator.hpp
lab7/src/drawable/slide/: ISlide.hpp  ISlide_fwd.hpp
lab7/src/drawable/slide/CSlide/: Slide.cpp  Slide.hpp
lab7/src/drawer/: DrawerSFML.cpp  DrawerSFML.hpp
lab7/src/enumerator/: IEnumerator.hpp
lab8/: CMakeLists.txt
lab8/NAive/: NaiveGumBallMachine.h  main.cpp
lab8/tests/: Makefile  cmake_install.cmake
lab9/: package-lock.json  package.json
(+131 files in other folders)
