cmake_minimum_required(VERSION 3.17)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

#add_subdirectory(ObserverFP)
#add_subdirectory(ObserverWithSignallingValue)
#add_subdirectory(ObserverWithSignals)
add_subdirectory(WeatherStation)
add_subdirectory(WeatherStation2)
add_subdirectory(WeatherStation3)
add_subdirectory(WeatherStationDuo)
